_sass/_base.scss
/**
 * Reset some basic elements
 */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
    margin: 0;
    padding: 0;
}



/**
 * Basic styling
 */
body {
    font-family: $base-font-family;
    font-size: $base-font-size;
    line-height: $base-line-height;
    font-weight: 300;
    color: $cl-fg;
    background-color: $cl-bg;
    -webkit-text-size-adjust: 100%;
    @media print {
        color: black;
        background-color: white;
    }
}




/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
%vertical-rhythm {
    margin-bottom: $spacing-unit / 2;
}



/**
 * Images
 */
img {
    max-width: 100%;
    vertical-align: middle;
}



/**
 * Figures
 */
figure > img {
    display: block;
}

figcaption {
    font-size: $small-font-size;
}



/**
 * Lists
 */
ul, ol {
    margin-left: $spacing-unit;
}

li {
    > ul,
    > ol {
         margin-bottom: 0;
    }
}



/**
 * Headings
 */
h1, h2, h3, h4, h5, h6 {
    font-weight: 300;
    font-family: $head-font-family;
}



/**
 * Links
 */
a {
    color: $cl-brand;
    text-decoration: none;

    &:visited {
        color: darken($cl-brand, 15%);
    }

    &:hover {
        color: $cl-fg;
        text-decoration: underline;
    }

    @media print {
        color: $cl-inv-brand;
        &:visited { color: darken($cl-inv-brand, 15%); }
        &:hover { color: black; }
    }
}



/**
 * Blockquotes
 */
blockquote {
    color: $cl-fg-lo;
    border-left: 4px solid $cl-sep;
    padding-left: $spacing-unit / 2;
    font-size: 18px;
    font-style: italic;

    > :last-child {
        margin-bottom: 0;
    }

    @media print {
        color: $cl-inv-fg-lo;
        border-left-color: $cl-inv-sep;
    }
}



/**
 * Code formatting
 */
pre,
code {
    font-size: 0.98em;
    font-family: $mono-font-family;
    white-space: pre;
}

pre {
    background-color: $cl-hl-bg;
    border-radius: 3px;
    border: 1px solid $cl-sep;
    padding: 8px 12px;
    overflow-x: auto;

    > code {
        border: 0;
        padding-right: 0;
        padding-left: 0;
    }

    @media print {
        background-color: transparent;
        border-color: $cl-inv-sep;
    }
}



/**
 * Wrapper
 */
.wrapper {
    max-width: -webkit-calc(800px - (#{$spacing-unit} * 2));
    max-width:         calc(800px - (#{$spacing-unit} * 2));
    margin-right: auto;
    margin-left: auto;
    padding-right: $spacing-unit;
    padding-left: $spacing-unit;
    @extend %clearfix;

    @include media-query($on-laptop) {
        max-width: -webkit-calc(800px - (#{$spacing-unit}));
        max-width:         calc(800px - (#{$spacing-unit}));
        padding-right: $spacing-unit / 2;
        padding-left: $spacing-unit / 2;
    }

    @media print {
        max-width: none;
    }
}



/**
 * Clearfix
 */
%clearfix {

    &:after {
        content: "";
        display: table;
        clear: both;
    }
}



/**
 * Icons
 */
.icon {

    > svg {
        display: inline-block;
        width: 16px;
        height: 16px;
        vertical-align: middle;

        path {
            fill: $cl-fg-lo;
            @media print { fill: $cl-inv-fg-lo; }
        }
    }
}

